--- a/src/styles/CountryDetails.css
+++ b/src/styles/CountryDetails.css
@@ -6,6 +6,7 @@
     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
   background: #fff;
   border-radius: 5px;
+  margin: 3rem 0;
 }
 
 .country-details-control {
